--- a/src/RushRoyale.WebUI/RushRoyale.WebUI.csproj
+++ b/src/RushRoyale.WebUI/RushRoyale.WebUI.csproj
@@ -8,15 +8,23 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.7" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.7" PrivateAssets="all" />
+        <PackageReference Include="MudBlazor" Version="6.0.14" />
     </ItemGroup>
 
     <ItemGroup>
       <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css.map" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="wwwroot\assets" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RushRoyale.WebApiClient\RushRoyale.WebApiClient.csproj" />
     </ItemGroup>
 
 </Project>
