--- a/src/RushRoyale.WebAPI/appsettings.json
+++ b/src/RushRoyale.WebAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Discord" : {
+    "ClientId": "1002400083893030942",
+    "ClientSecret": "T26TlubpycWuQs8EXfZ0h89R--DSnXFU"
+  }
 }
