--- a/src/RushRoyale.WebAPI/RushRoyale.WebAPI.csproj
+++ b/src/RushRoyale.WebAPI/RushRoyale.WebAPI.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AspNet.Security.OAuth.Discord" Version="6.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
         <PackageReference Include="NSwag.AspNetCore" Version="13.16.1" />
         <PackageReference Include="NSwag.MSBuild" Version="13.16.1">
             <PrivateAssets>all</PrivateAssets>
