--- a/src/RushRoyale.WebUI/wwwroot/appsettings.json
+++ b/src/RushRoyale.WebUI/wwwroot/appsettings.json
@@ -2,6 +2,9 @@
     "Api": {
         "BaseUrl": "https://rushroyale.xyz/api"
     },
+    "UI": {
+        "BaseUrl": "https://rushroyale.xyz/"
+    },
     "Discord": {
         "ClientId": "1002400083893030942"
     }
