--- a/src/RushRoyale.WebUI/wwwroot/appsettings.json
+++ b/src/RushRoyale.WebUI/wwwroot/appsettings.json
@@ -5,7 +5,12 @@
     "UI": {
         "BaseUrl": "https://rushroyale.xyz/"
     },
-    "Discord": {
-        "ClientId": "1002400083893030942"
+    "Auth0": {
+        "ClientId": "qTye5H9oOMd2YwihAyXvZxJ2mzDvE0YW",
+        "Authority": "https://dev-esapgk-b.us.auth0.com",
+        "ValidateAuthority": true,
+
+        "PostLogoutRedirectUri": "https://rushroyale.xyz/authentication/logout-callback",
+        "RedirectUri": "https://rushroyale.xyz/authentication/login-callback"
     }
 }
