--- a/src/RushRoyale.WebUI/wwwroot/appsettings.Development.json
+++ b/src/RushRoyale.WebUI/wwwroot/appsettings.Development.json
@@ -5,8 +5,9 @@
     "UI": {
         "BaseUrl": "https://localhost:7028/"
     },
-    "Discord": {
-        "ClientId": "1002400083893030942"
+    "Auth0": {
+        "PostLogoutRedirectUri": "https://localhost:7028/authentication/logout-callback",
+        "RedirectUri": "https://localhost:7028/authentication/login-callback"
     },
     "Developer": {
         "Enabled": true
