✨ Data Mining & 🚧 Input Player Data

--- a/src/RushRoyale.WebUI/RushRoyale.WebUI.csproj
+++ b/src/RushRoyale.WebUI/RushRoyale.WebUI.csproj
@@ -20,6 +20,7 @@
       <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
       <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css" />
       <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css.map" />
+      <_ContentIncludedByDefault Remove="wwwroot\data-mine\localizations.json" />
     </ItemGroup>
 
     <ItemGroup>
