🧱 Cosmos DB &  ✨User Profile API

--- a/src/RushRoyale.WebAPI/appsettings.json
+++ b/src/RushRoyale.WebAPI/appsettings.json
@@ -6,13 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Discord" : {
-    "ClientId": "1002400083893030942",
-    "ClientSecret": "T26TlubpycWuQs8EXfZ0h89R--DSnXFU"
-  },
-  "JWT": {
-    "Key": "yeeajeff3f8j0joaeijrofJ04J3FIJ59YUHO30",
-    "Issuer": "https://rushroyale.xyz",
-    "Audience": "rushroyale.xyz"
+  "Auth0": {
+    "Authority": "https://dev-esapgk-b.us.auth0.com/",
+    "Audience": "https://rushroyale.xyz"
   }
 }
