--- a/src/RushRoyale.WebUI/wwwroot/appsettings.json
+++ b/src/RushRoyale.WebUI/wwwroot/appsettings.json
@@ -8,6 +8,7 @@
     "Auth0": {
         "ClientId": "qTye5H9oOMd2YwihAyXvZxJ2mzDvE0YW",
         "Authority": "https://dev-esapgk-b.us.auth0.com",
+        "Audience": "https://rushroyale.xyz",
         "ValidateAuthority": true,
 
         "PostLogoutRedirectUri": "https://rushroyale.xyz/authentication/logout-callback",
