--- a/src/RushRoyale.Application/RushRoyale.Application.csproj
+++ b/src/RushRoyale.Application/RushRoyale.Application.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\RushRoyale.Infrastructure\RushRoyale.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
