--- a/src/Tools/RushRoyale.DataMiner/RushRoyale.DataMiner.csproj
+++ b/src/Tools/RushRoyale.DataMiner/RushRoyale.DataMiner.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
       <PackageReference Include="Spectre.Console" Version="0.44.0" />
     </ItemGroup>
 
