--- a/src/RushRoyale.Application/RushRoyale.Application.csproj
+++ b/src/RushRoyale.Application/RushRoyale.Application.csproj
@@ -7,12 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.10.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\RushRoyale.Discord\RushRoyale.Discord.csproj" />
       <ProjectReference Include="..\RushRoyale.Infrastructure\RushRoyale.Infrastructure.csproj" />
     </ItemGroup>
 
